# lorem-jax

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: lint.yml  release.yml  tests.yml
examples/calculator/: example.py
examples/md-ipi/: .gitignore  README.md  input.xml  run.sh  start.xyz
examples/train-bec/: .gitignore  README.md  bec_example.xyz  prepare.py  run.sh
examples/train-bec/my_experiment/: model.yaml  settings.yaml
examples/train-mlp/: .gitignore  README.md  data.xyz  prepare.py
examples/train-mlp/my_experiment/: model.yaml  settings.yaml
examples/train-mlp/my_experiment_finetune/: settings.yaml
src/lorem/: __init__.py  __main__.py  _install_ipi_driver.py  batching.py  calculator.py  ipi.py  neighborlist.py  train.py  transforms.py
src/lorem/dynamics/: __init__.py  _install_ipi_driver.py  ase.py  ipi.py
src/lorem/models/: __init__.py  _e3j_convert.py  backbone.py  bec.py  mlip.py  mlip_e3j.py
src/loremjax/: __init__.py
src/loremjax/dynamics/: _install_ipi_driver.py  ase.py  ipi.py
tests/: test_backbone.py  test_calculator.py  test_init.py  test_ipi.py  test_neighborlist.py  test_train.py
tests/dynamics.py/: test_ipi.py
