[build-system]
requires = ["setuptools>=45", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "ase",
    "e3x",
    "flax",
    "ipi",
    "jax",
    "jaxtyping",
    "optax",
    # comms, jaxpme, and marathon are local deps, install separately
]
dynamic = ["version"]
license = "BSD-3-Clause"
name = "lorem-jax"
requires-python = ">=3.11"

[project.scripts]
lorem-install-ipi-driver = "lorem.dynamics._install_ipi_driver:install_ipi_driver"
lorem-train = "lorem.train:main"

[tool.pytest.ini_options]
python_files = ["*.py"]
testpaths = ["tests"]
addopts = [
    "--cov",
    "--cov-append",
    "--cov-report=",
    "--import-mode=append",
]
filterwarnings = ["error"]

[tool.ruff]
exclude = ["src/lorem/_version.py"]
line-length = 92

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "I",   # isort
]

# E501: don't worry about line length (the formatter will take care of it)
# E741: don't worry about short variable names
# E731: don't worry about lambdas
# E402: we're ok with importing in arbitrary places (for inline testing and scripts)
ignore = ["E741", "E731", "E402", "E501"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,examples}/*" = ["D1"]

[tool.ruff.lint.isort]
known-first-party = ["lorem"]
section-order = ["numpy", "jax", "future", "standard-library", "third-party", "first-party", "local-folder"]
no-lines-before = ["jax", "numpy"]

[tool.ruff.lint.isort.sections]
"numpy" = ["numpy"]
"jax" = ["jax", "jax.numpy"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools_scm]
version_file = "src/lorem/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
